--- a/l10n_it_ricevute_bancarie/i18n/it.po
+++ b/l10n_it_ricevute_bancarie/i18n/it.po
@@ -90,7 +90,7 @@ msgstr "Sezionale utilizzato quando la Ri.Ba. viene accettata dalla banca"
 #: field:riba.configurazione,accreditation_account_id:0
 #: field:riba.unsolved,riba_bank_account_id:0
 msgid "Ri.Ba. bank account"
-msgstr "Conto Ri.Ba. SBF"
+msgstr "Conto anticipo SBF (se presente)"
 
 #. module: l10n_it_ricevute_bancarie
 #: field:riba.distinta.line,bank_id:0
@@ -290,11 +290,6 @@ msgstr "The date of your Journal Entry is not in the defined period! You should 
 #: view:riba.distinta:0
 msgid "Reset to Draft"
 msgstr "Reimposta a bozza"
-
-#. module: l10n_it_ricevute_bancarie
-#: field:riba.accreditation,date_value:0
-msgid "Value date"
-msgstr "Data Valuta"
 
 #. module: l10n_it_ricevute_bancarie
 #: model:ir.model,name:l10n_it_ricevute_bancarie.model_res_partner
@@ -730,7 +725,7 @@ msgstr "Data accettazione"
 #. module: l10n_it_ricevute_bancarie
 #: field:riba.configurazione,acceptance_account_id:0
 msgid "Acceptance account"
-msgstr "Conto effetti SBF"
+msgstr "Conto RI.BA. all'incasso"
 
 #. module: l10n_it_ricevute_bancarie
 #: code:addons/l10n_it_ricevute_bancarie/wizard/riba_file_export.py:204
@@ -824,7 +819,7 @@ msgstr "Raggruppa per fattura"
 #. module: l10n_it_ricevute_bancarie
 #: field:riba.distinta.line,acceptance_account_id:0
 msgid "Acceptance Account"
-msgstr "Conto effetti SBF"
+msgstr "Conto RI.BA. all'incasso"
 
 #. module: l10n_it_ricevute_bancarie
 #: selection:riba.distinta,state:0
