--- a/account_financial_report_horizontal/i18n/it.po
+++ b/account_financial_report_horizontal/i18n/it.po
@@ -20,7 +20,12 @@ msgstr ""
 #. module: account_financial_report_horizontal
 #: model:ir.actions.report.xml,name:account_financial_report_horizontal.account_balance_sheet_horizontal
 msgid "Balance Sheet Horizontal"
-msgstr "Bilancio orizzontale"
+msgstr "Stato Patrimoniale orizzontale"
+
+#. module: account_financial_report_horizontal
+#: model:ir.ui.menu,name:account_financial_report_horizontal.final_accounting_reports
+msgid "Horizontal Financial Reports"
+msgstr "Report Bilancio Orizzontale"
 
 #. module: account_financial_report_horizontal
 #: report:account.profit_loss:0
@@ -43,7 +48,7 @@ msgstr "Conto economico orizzontale"
 #. module: account_financial_report_horizontal
 #: field:account.bs.report,reserve_account_id:0
 msgid "Reserve & Profit/Loss Account"
-msgstr "Conto per riserve e profitti/perdite"
+msgstr "Conto per riserve e utili/perdite"
 
 #. module: account_financial_report_horizontal
 #: view:account_financial_report_horizontal.common.report:0
@@ -66,7 +71,7 @@ msgstr "Filtra per"
 #. module: account_financial_report_horizontal
 #: model:ir.model,name:account_financial_report_horizontal.model_account_pl_report
 msgid "Account Profit And Loss Report"
-msgstr "Report dei conti di perdite e profitti"
+msgstr "Report dei conti di perdite e utili"
 
 #. module: account_financial_report_horizontal
 #: view:account.bs.report:0
@@ -91,7 +96,7 @@ msgstr "Saldo:"
 #: report:account.profit_loss:0
 #: model:ir.ui.menu,name:account_financial_report_horizontal.menu_account_pl_report
 msgid "Profit And Loss"
-msgstr "Profitto e perdita"
+msgstr "Conto Economico"
 
 #. module: account_financial_report_horizontal
 #: report:account.balancesheet:0
@@ -169,7 +174,7 @@ msgstr "Periodo di inizio"
 #: view:account_financial_report_horizontal.common.report:0
 #: field:account_financial_report_horizontal.common.report,journal_ids:0
 msgid "Journals"
-msgstr "Sezionali"
+msgstr "Giornali"
 
 #. module: account_financial_report_horizontal
 #: report:account.balancesheet:0
@@ -206,7 +211,7 @@ msgid ""
 "added, Loss: Amount will be duducted), which is calculated from Profilt & "
 "Loss Report"
 msgstr ""
-"Questo conto è usato per trasferire Profitti/Perdite (Profitti: gli importi "
+"Questo conto è usato per trasferire Utili/Perdite (Utili: gli importi "
 "saranno aggiunti, Perdite: gli importi saranno dedotti), calcolati dal "
 "report del conto economico"
 
@@ -239,7 +244,7 @@ msgstr "Periodo Iniziale"
 #: report:account.balancesheet:0
 #: report:account.balancesheet.horizontal:0
 msgid "Assets"
-msgstr "Cespiti"
+msgstr "Attività"
 
 #. module: account_financial_report_horizontal
 #: report:account.profit_horizontal:0
@@ -308,7 +313,7 @@ msgstr "Anno Fiscale"
 #: code:addons/account_financial_report_horizontal/report/account_profit_loss.py:137
 #, python-format
 msgid "Net Profit"
-msgstr "Profitto netto"
+msgstr "Utile"
 
 #. module: account_financial_report_horizontal
 #: selection:account.bs.report,filter:0
@@ -353,7 +358,7 @@ msgstr "Saldo"
 #: code:addons/account_financial_report_horizontal/report/account_profit_loss.py:134
 #, python-format
 msgid "Net Loss"
-msgstr "Perdita netta"
+msgstr "Perdita"
 
 #. module: account_financial_report_horizontal
 #: view:account.pl.report:0
@@ -361,7 +366,7 @@ msgid ""
 "The Profit and Loss report gives you an overview of your company profit and "
 "loss in a single document"
 msgstr ""
-"Il report su perdite e profitti fornisce una visuale dell'andamento "
+"Il report su perdite e utili fornisce una visuale dell'andamento "
 "dell'azienda in un unico documento"
 
 #. module: account_financial_report_horizontal
@@ -399,12 +404,12 @@ msgstr "Report Conti di Contabilità Generale"
 #. module: account_financial_report_horizontal
 #: model:ir.actions.act_window,name:account_financial_report_horizontal.action_account_pl_report
 msgid "Account Profit And Loss"
-msgstr "Conto per profitti e perdite"
+msgstr "Conto per utili e perdite"
 
 #. module: account_financial_report_horizontal
 #: model:ir.model,name:account_financial_report_horizontal.model_account_bs_report
 msgid "Account Balance Sheet Report"
-msgstr "Report di Bilancio"
+msgstr "Report Stato Patrimoniale"
 
 #. module: account_financial_report_horizontal
 #: report:account.profit_loss:0
@@ -427,7 +432,7 @@ msgstr "Periodo finale"
 #: model:ir.actions.report.xml,name:account_financial_report_horizontal.account_balance_sheet
 #: model:ir.ui.menu,name:account_financial_report_horizontal.menu_account_bs_report
 msgid "Balance Sheet"
-msgstr "Bilancio"
+msgstr "Stato Patrimoniale"
 
 #. module: account_financial_report_horizontal
 #: field:account.bs.report,fiscalyear_id:0
@@ -462,11 +467,6 @@ msgid "Cancel"
 msgstr "Annulla"
 
 #. module: account_financial_report_horizontal
-#: model:ir.ui.menu,name:account_financial_report_horizontal.final_accounting_reports
-msgid "Alt. Accounting Reports"
-msgstr ""
-
-#. module: account_financial_report_horizontal
 #: help:account.bs.report,chart_account_id:0
 #: help:account.pl.report,chart_account_id:0
 #: help:account_financial_report_horizontal.common.account.report,chart_account_id:0
@@ -498,5 +498,5 @@ msgstr "Tutte le Registrazioni"
 msgid ""
 "Please define the Reserve and Profit/Loss account for current user company !"
 msgstr ""
-"Va definito il conto per riserve, e profitti/perdite per l'azienda "
+"Va definito il conto per riserve, e utili/perdite per l'azienda "
 "dell'attuale utente"
