--- a/sale_order_confirm/i18n/it.po
+++ b/sale_order_confirm/i18n/it.po
@@ -338,7 +338,7 @@ msgstr "Limite Credito"
 #. module: sale_order_confirm
 #: field:sale.order.line,delivered_qty:0
 msgid "Delivered Qty"
-msgstr "Q.tà Cons."
+msgstr "Q.tà Cons"
 
 #. module: sale_order_confirm
 #: field:res.company,default_property_payment_term:0
