--- a/work_order/i18n/it.po
+++ b/work_order/i18n/it.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 6.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-03-04 17:49+0000\n"
-"PO-Revision-Date: 2014-03-04 17:49+0000\n"
+"POT-Creation-Date: 2015-03-19 09:48+0000\n"
+"PO-Revision-Date: 2015-03-19 09:48+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -21,9 +21,21 @@ msgid "Order Reference must be unique per Company!"
 msgstr "Il Riferimento Ordine deve essere unico per azienda!"
 
 #. module: work_order
+#: code:addons/work_order/sale_order.py:239
+#: field:sale.shop,project_required:0
+#, python-format
+msgid "Require a Project"
+msgstr "Crea un Progetto"
+
+#. module: work_order
 #: field:account.analytic.line,origin_document:0
 msgid "Origin Document"
 msgstr "Documento di Origine"
+
+#. module: work_order
+#: constraint:project.task:0
+msgid "Error ! Task end-date must be greater then task start-date"
+msgstr "Errore ! La data finale della mansione deve essere  più vecchia di quella iniziale"
 
 #. module: work_order
 #: field:res.company,hour:0
@@ -31,7 +43,12 @@ msgid "Hour UoM"
 msgstr "Unità di Misura per le Task"
 
 #. module: work_order
-#: code:addons/work_order/account.py:95
+#: constraint:res.company:0
+msgid "Error! You can not create recursive companies."
+msgstr "Attenzione: non puoi creare aziende ricorsive"
+
+#. module: work_order
+#: code:addons/work_order/account.py:107
 #, python-format
 msgid "There is no expense account defined\n"
 "                                            for this product: \"{0}\" (id:{1})"
@@ -39,12 +56,7 @@ msgstr "Non c'è un conto spesa definito\n"
 "                                            per questo prodotto: \"{0}\" (id:{1})"
 
 #. module: work_order
-#: field:res.company,create_task:0
-msgid "Create Task from Sale Order?"
-msgstr "Crea Attività confermando un Ordine di Vendita"
-
-#. module: work_order
-#: code:addons/work_order/account.py:65
+#: code:addons/work_order/account.py:77
 #: field:res.company,expense_journal_id:0
 #, python-format
 msgid "Expense Journal"
@@ -76,6 +88,31 @@ msgid "Analytic Line"
 msgstr "Linea conto analitico"
 
 #. module: work_order
+#: constraint:project.task:0
+msgid "Error ! You cannot create recursive tasks."
+msgstr "Errore ! Non è possibile creare attività ricorsive."
+
+#. module: work_order
+#: field:template.task,company_id:0
+msgid "Company"
+msgstr "Azienda"
+
+#. module: work_order
+#: model:ir.model,description:work_order.model_template_task
+msgid "Task Template"
+msgstr "Attività Predefinite"
+
+#. module: work_order
+#: model:res.request.link,name:work_order.req_link_sale_order_line
+msgid "Sale Order Line"
+msgstr "Riga di Vendita"
+
+#. module: work_order
+#: model:ir.model,name:work_order.model_sale_shop
+msgid "Sales Shop"
+msgstr "Negozio"
+
+#. module: work_order
 #: constraint:project.project:0
 msgid "Error! You cannot assign escalation to the same project!"
 msgstr "Errore ! Non è possibile assegnare l'escalation allo stesso progetto!"
@@ -87,7 +124,44 @@ msgid "Default Work Order Tasks"
 msgstr "Attività all'inizio di ogni Commessa"
 
 #. module: work_order
-#: code:addons/work_order/account.py:94
+#: model:ir.model,name:work_order.model_project_task
+msgid "Task"
+msgstr "Attività"
+
+#. module: work_order
+#: sql_constraint:res.company:0
+msgid "The company name must be unique !"
+msgstr "Il nome azienda deve essere unico!"
+
+#. module: work_order
+#: help:template.task,planned_hours:0
+msgid "Estimated time to do the task, usually set by the project manager when the task is in draft state."
+msgstr "Tempo stimato per completare l'attività, solitamente configurato dal project manager quando l'attività è in stato bozza."
+
+#. module: work_order
+#: model:ir.model,name:work_order.model_res_company
+msgid "Companies"
+msgstr "Aziende"
+
+#. module: work_order
+#: field:template.task,name:0
+msgid "Task Summary"
+msgstr "Descrizione attività"
+
+#. module: work_order
+#: code:addons/work_order/sale_order.py:69
+#: code:addons/work_order/stock_picking.py:33
+#: code:addons/work_order/stock_picking.py:35
+#: model:ir.model,name:work_order.model_project_project
+#: field:sale.order,project_project:0
+#: field:stock.picking,project_id:0
+#: field:stock.picking,sale_project:0
+#, python-format
+msgid "Project"
+msgstr "Progetto"
+
+#. module: work_order
+#: code:addons/work_order/account.py:106
 #, python-format
 msgid "Error!"
 msgstr "Errore!"
@@ -98,22 +172,61 @@ msgid "Reference must be unique per Company!"
 msgstr "Il riferimento deve essere unico per ogni azienda!"
 
 #. module: work_order
-#: code:addons/work_order/account.py:66
+#: field:res.company,task_no_user:0
+msgid "Task without default user"
+msgstr "Attività senza utenti"
+
+#. module: work_order
+#: field:res.company,create_task:0
+msgid "Create Task from Sale Order?"
+msgstr "Crea Attività confermando un Ordine di Vendita"
+
+#. module: work_order
+#: field:template.task,user_id:0
+msgid "Task owner User"
+msgstr "Utente dell'attività"
+
+#. module: work_order
+#: code:addons/work_order/project.py:62
+#: field:project.task,origin:0
+#, python-format
+msgid "Reference"
+msgstr "Reference"
+
+#. module: work_order
+#: help:res.company,task_no_user:0
+msgid "If set the task will not have a user, so will be visible to all"
+msgstr "Se selezionato l'attività non avrà un utente, quindi sarà visibile a tutti"
+
+#. module: work_order
+#: code:addons/work_order/account.py:78
 #: field:res.company,delivery_note_journal_id:0
 #, python-format
 msgid "Delivery Note Journal"
 msgstr "Sezionale DDT"
 
 #. module: work_order
-#: code:addons/work_order/account.py:76
+#: code:addons/work_order/account.py:88
 #, python-format
 msgid "{journal} is not defined for this company"
 msgstr "{journal} non è definito per questa Azienda"
 
 #. module: work_order
+#: code:addons/work_order/stock_picking.py:34
+#: field:stock.picking,account_id:0
+#, python-format
+msgid "Analytic Account"
+msgstr "Conto Analitico"
+
+#. module: work_order
 #: constraint:account.analytic.line:0
 msgid "You can not create analytic line on view account."
 msgstr "Non si possono creare delle voci analitiche in un conto di tipo vista."
+
+#. module: work_order
+#: model:ir.model,name:work_order.model_sale_order
+msgid "Sales Order"
+msgstr "Ordine di vendita"
 
 #. module: work_order
 #: field:template.task,planned_hours:0
