--- a/product_filter_availability_ext_isa/i18n/it.po
+++ b/product_filter_availability_ext_isa/i18n/it.po
@@ -25,3 +25,7 @@ msgstr "Errore: Codice ean non valido"
 msgid "Availability > 0"
 msgstr "Disponibilità > 0"
 
+#. module: product_filter_availability_ext_isa
+#: view:product.product:0
+msgid "Availability < 0"
+msgstr "Disponibilità < 0"
