--- a/project_extended/i18n/it.po
+++ b/project_extended/i18n/it.po
@@ -30,3 +30,7 @@ msgstr "Totale Speso"
 msgid "Sell Amount"
 msgstr "Totale Venduto"
 
+#. module: project_extended
+#: field:project.project,total_sell_service:0
+msgid "Service Sell Amount"
+msgstr "Totale Servizi Venduti"
