--- a/l10n_it_account/i18n/it.po
+++ b/l10n_it_account/i18n/it.po
@@ -222,7 +222,7 @@ msgstr "Giornale: %s"
 #. module: account
 #: help:account.analytic.journal,type:0
 msgid "Gives the type of the analytic journal. When it needs for a document (eg: an invoice) to create analytic entries, OpenERP will look for a matching journal of the same type."
-msgstr "Fornisce il tipo di giornale analitico. Quando cerca un documento (es: una fattura) per creare una registrazione analitica, OpenERP controllerà la presenza di un giornale dello stesso tipo."
+msgstr "Fornisce il tipo di giornale analitico. Quando cerca un documento (es: una fattura) per creare una registrazione analitica, SimplERP controllerà la presenza di un giornale dello stesso tipo."
 
 #. module: account
 #: model:ir.actions.act_window,name:account.action_account_tax_template_form
@@ -1225,7 +1225,7 @@ msgstr "Tutte le vendite mensili per tipo"
 #. module: account
 #: model:ir.actions.act_window,help:account.action_invoice_tree2
 msgid "With Supplier Invoices you can enter and manage invoices issued by your suppliers. OpenERP can also generate draft invoices automatically from purchase orders or receipts. This way, you can control the invoice from your supplier according to what you purchased or received."
-msgstr "Con le fatture Fornitore puoi inserire ed amministrare le fatture inviate dai fornitori. OpenERP può anche generare automaticamente bozze di fattura fornitore da ordini di acquisto o documenti di ricevimento merce. In questo modo, puoi controllare la corrispondenza della fattura del fornitore con quanto inserito nell'ordine d'acquisto o con quanto ricevuto."
+msgstr "Con le fatture Fornitore puoi inserire ed amministrare le fatture inviate dai fornitori. SimplERP può anche generare automaticamente bozze di fattura fornitore da ordini di acquisto o documenti di ricevimento merce. In questo modo, puoi controllare la corrispondenza della fattura del fornitore con quanto inserito nell'ordine d'acquisto o con quanto ricevuto."
 
 #. module: account
 #: model:ir.actions.act_window,name:account.action_account_tax_code_template_form
@@ -1554,7 +1554,7 @@ msgstr "Totale senza imposte"
 #. module: account
 #: model:ir.actions.act_window,help:account.action_move_journal_line
 msgid "A journal entry consists of several journal items, each of which is either a debit or a credit transaction. OpenERP automatically creates one journal entry per accounting document: invoice, refund, supplier payment, bank statements, etc."
-msgstr "Un Movimento Giornale consiste in diversi componenti, ognuno di essi è una transazione a credito o a debito. OpenERP crea automaticate un movimento per ciascun documento contabile: fatture, note di credito, pagamento fornitori, estratti conto, ecc."
+msgstr "Un Movimento Giornale consiste in diversi componenti, ognuno di essi è una transazione a credito o a debito. SimplERP crea automaticate un movimento per ciascun documento contabile: fatture, note di credito, pagamento fornitori, estratti conto, ecc."
 
 #. module: account
 #: view:account.entries.report:0
@@ -2356,7 +2356,7 @@ msgstr "Il giornale \"%s\" non ha un conto di debito di default predefinito"
 #: help:account.account.template,type:0
 #: help:account.entries.report,type:0
 msgid "This type is used to differentiate types with special effects in OpenERP: view can not have entries, consolidation are accounts that can have children accounts for multi-company consolidations, payable/receivable are for partners accounts (for debit/credit computations), closed for depreciated accounts."
-msgstr "Questo tipo è usato per differenziare conti con ricadute particolari in OpenERP: le viste non ricevono movimenti, consolidamento sono quei conti che hanno dei conti subordinati come nel caso del consolidamento multi-company, crediti/debiti sono per i conti partner, chiusi sono i conti di ammortamento."
+msgstr "Questo tipo è usato per differenziare conti con ricadute particolari in SimplERP: le viste non ricevono movimenti, consolidamento sono quei conti che hanno dei conti subordinati come nel caso del consolidamento multi-company, crediti/debiti sono per i conti partner, chiusi sono i conti di ammortamento."
 
 #. module: account
 #: view:account.chart.template:0
@@ -5958,7 +5958,7 @@ msgstr "Questa vista consente l'analisi dei differenti conti. Il documento mostr
 #. module: account
 #: model:ir.actions.act_window,help:account.action_tax_code_list
 msgid "The tax code definition depends on the tax declaration of your country. OpenERP allows you to define the tax structure and manage it from this menu. You can define both numeric and alphanumeric tax codes."
-msgstr "Il codice della tassa dipende dal tipo di dichiarazione della tua Nazione. OpenERP consente di definire la struttura delle tasse e gestirle da questo menu. Possono essere usati sia codici numerici che alfanumerici."
+msgstr "Il codice della tassa dipende dal tipo di dichiarazione della tua Nazione. SimplERP consente di definire la struttura delle tasse e gestirle da questo menu. Possono essere usati sia codici numerici che alfanumerici."
 
 #. module: account
 #: help:account.partner.reconcile.process,progress:0
@@ -6178,7 +6178,7 @@ msgstr "Messaggio in caso di pagamenti in ritardo"
 #. module: account
 #: model:ir.actions.act_window,help:account.action_account_moves_all_a
 msgid "This view can be used by accountants in order to quickly record entries in OpenERP. If you want to record a supplier invoice, start by recording the line of the expense account. OpenERP will propose to you automatically the Tax related to this account and the counterpart \"Account Payable\"."
-msgstr "Questa visuale può essere usata in contabilità in modo da inserire velocemente registrazioni in OpenERP. Se si vuole registrare una fattura fornitori, si inizia nell'inserire la linea del costo. OpenERP proporrà automaticamente la tassazione legata a questo conto e la sua controparte \"Conti Debito\"."
+msgstr "Questa visuale può essere usata in contabilità in modo da inserire velocemente registrazioni in SimplERP. Se si vuole registrare una fattura fornitori, si inizia nell'inserire la linea del costo. SimplERP proporrà automaticamente la tassazione legata a questo conto e la sua controparte \"Conti Debito\"."
 
 #. module: account
 #: field:account.entries.report,date_created:0
@@ -7158,7 +7158,7 @@ msgstr "Fatto"
 #. module: account
 #: model:ir.actions.act_window,help:account.action_bank_tree
 msgid "Configure your company's bank account and select those that must appear on the report footer. You can reorder banks in the list view. If you use the accounting application of OpenERP, journals and accounts will be created automatically based on these data."
-msgstr "Configurare conto bancario della vostra azienda e selezionare quelli che devono apparire sul piede di pagina report. È possibile riordinare le banche nella vista elenco. Se si utilizza l'applicazione contabile di OpenERP, sezionali e conti  verranno creati automaticamente sulla base di questi dati."
+msgstr "Configurare conto bancario della vostra azienda e selezionare quelli che devono apparire sul piede di pagina report. È possibile riordinare le banche nella vista elenco. Se si utilizza l'applicazione contabile di SimplERP, sezionali e conti  verranno creati automaticamente sulla base di questi dati."
 
 #. module: account
 #: model:process.transition,note:account.process_transition_invoicemanually0
@@ -8107,7 +8107,7 @@ msgstr "Queste registrazioni contabili non sono in uno stato valido."
 #. module: account
 #: model:ir.actions.act_window,help:account.action_account_analytic_account_tree2
 msgid "The normal chart of accounts has a structure defined by the legal requirement of the country. The analytic chart of accounts structure should reflect your own business needs in term of costs/revenues reporting. They are usually structured by contracts, projects, products or departements. Most of the OpenERP operations (invoices, timesheets, expenses, etc) generate analytic entries on the related account."
-msgstr "Il piano dei conti normalmente ha una struttura definita dal requisito giuridico del paese. La struttura del piano dei conti analitico deve riflettere le esigenze di business in termini di report di costi / ricavi. Di solito sono strutturati per contratti, progetti, prodotti o dipartimenti. La maggior parte delle operazioni di OpenERP (fatture, schede attività, spese, ecc) generano registrazioni analitiche sul relativo conto."
+msgstr "Il piano dei conti normalmente ha una struttura definita dal requisito giuridico del paese. La struttura del piano dei conti analitico deve riflettere le esigenze di business in termini di report di costi / ricavi. Di solito sono strutturati per contratti, progetti, prodotti o dipartimenti. La maggior parte delle operazioni di SimplERP (fatture, schede attività, spese, ecc) generano registrazioni analitiche sul relativo conto."
 
 #. module: account
 #: field:account.account.type,close_method:0
@@ -9077,7 +9077,7 @@ msgstr "Costi Analitici (Schede Attività. Prodotti acquistati, ...) provengono 
 #. module: account
 #: help:account.journal,view_id:0
 msgid "Gives the view used when writing or browsing entries in this journal. The view tells OpenERP which fields should be visible, required or readonly and in which order. You can create your own view for a faster encoding in each journal."
-msgstr "Mostra la visuale usata quando si scrive o si naviga nelle registrazioni in questo libro giornale. La visuale fa si che OpenERP sappia quali campi deve rendere visibili, obbligatori o in sola lettura ed in quale ordine. Si può creare una vista personalizzata per una codifica più agevole e veloce di ciascun libro giornale."
+msgstr "Mostra la visuale usata quando si scrive o si naviga nelle registrazioni in questo libro giornale. La visuale fa si che SimplERP sappia quali campi deve rendere visibili, obbligatori o in sola lettura ed in quale ordine. Si può creare una vista personalizzata per una codifica più agevole e veloce di ciascun libro giornale."
 
 #. module: account
 #: field:account.period,date_stop:0
