--- a/web_client/ea_web-github/addons/web_process/i18n/it.po
+++ b/web_client/ea_web-github/addons/web_process/i18n/it.po
@@ -65,12 +65,12 @@ msgstr "Ottieni i libri"
 #. openerp-web
 #: addons/web_process/static/src/xml/web_process.xml:37
 msgid "OpenERP Enterprise"
-msgstr "SimplERP Enterprise"
+msgstr "LibrERP Enterprise"
 
 #. openerp-web
 #: addons/web_process/static/src/xml/web_process.xml:37
 msgid "Purchase OpenERP Enterprise"
-msgstr "Acquista SimplERP Enterprise"
+msgstr "Acquista LibrERP Enterprise"
 
 #. openerp-web
 #: addons/web_process/static/src/xml/web_process.xml:52
