--- a/l10n_it_account/i18n/it.po
+++ b/l10n_it_account/i18n/it.po
@@ -3113,7 +3113,7 @@ msgstr "Importo codice base"
 #: code:addons/account/account_invoicexxx.py:459
 #, python-format
 msgid "You can not delete an invoice which is open or paid. We suggest you to refund it instead."
-msgstr "Non è possibile cancellare una fattura in stato aperto o pagato. È preferibile eseguire un rimborso."
+msgstr "Non è possibile cancellare una fattura in stato aperto o pagato. È preferibile eseguire un rimborso. Se è già in stato Bozza allora và cancellato il Forza numero"
 
 #. module: account
 #: field:wizard.multi.charts.accounts,sale_tax:0
