--- a/sale_order_confirm/i18n/it.po
+++ b/sale_order_confirm/i18n/it.po
@@ -231,7 +231,7 @@ msgstr "Totale Imponibile"
 #. module: sale_order_confirm
 #: view:sale.order:0
 msgid "Send to Customer"
-msgstr "Spedire al Cliente"
+msgstr "Spedito al Cliente"
 
 #. module: sale_order_confirm
 #: view:sale.order:0
@@ -679,3 +679,29 @@ msgstr "Conferma Revisione Manager"
 #: view:sale.order.revision.note:0
 msgid "Reject and Close"
 msgstr "Respingi e Chiudi"
+
+#. module: sale_order_confirm
+#: field:sale.order,sale_order_minimun:0
+msgid "Minimun Invoice"
+msgstr "Minimo Fatturabile"
+
+#. module: sale_order_confirm
+#: view:sale.shop:0
+msgid "Minimun Order"
+msgstr "Ordine Minimo"
+
+#. module: sale_order_confirm
+#: field:sale.shop,sale_order_minimun:0
+msgid "Minimum Amount of Sale Order"
+msgstr "Importo minimo dell'ordine di vendita"
+
+#. module: sale_order_confirm
+#: field:sale.shop,sale_order_have_minimum:0
+msgid "Minimum Amount"
+msgstr "Importo Minimo?"
+
+#. module: sale_order_confirm
+#: help:sale.shop,sale_order_have_minimum:0
+msgid "The Sale Order of this shop have a Minimun Amount"
+msgstr "L'ordine di vendita di questo negozio avrà un importo minimo"
+
