--- a/web_support/i18n/it.po
+++ b/web_support/i18n/it.po
@@ -85,3 +85,34 @@ msgstr "Email"
 #: field:support.email,name:0
 msgid "Name"
 msgstr "Nome"
+
+
+#. openerp-web
+#: web_support/static/src/xml/base.xml:15
+msgid ""
+"This is an unmanaged error produced in your OpenERP instance, this is not"
+" suppose to happend. In the Debug tab you can find technical information "
+"about the error."
+msgstr ""
+"Questo è un errore non gestito di LibrERP, questo non doveve succedere."
+"Nella scheda Debug è possibile trovare informazioni tecniche sull'errore."
+
+#. openerp-web
+#: web_support/static/src/xml/base.xml:21
+msgid "Your OpenERP instance is supported by"
+msgstr "La sua installazione di LibrERP è supportata da"
+
+#. openerp-web
+#: web_support/static/src/xml/base.xml:24
+msgid ""
+"You can send all the information regarding this error to us directly by "
+"clicking the button \"Send Error\"."
+msgstr ""
+"È possibile inviare tutte le informazioni riguardanti questo errore a noi direttamente"
+"premento il pulsante \" Send Error \ "."
+
+#. openerp-web
+#: /home/damian/Desarrollo/addons/compartidos/web/web_support/static/src/xml/base.xml:34
+msgid "Unfortunatelly your OpenERP instance is not supported."
+msgstr "Sfortunatamente la tua installazione di LibrERP non è supportata."
+
