[l10n_it_account] fix, now when duplicate an invoice supplier reference must be rewrite

--- a/l10n_it_account/i18n/it.po
+++ b/l10n_it_account/i18n/it.po
@@ -9029,7 +9029,7 @@ msgstr "Imposta acquisti (%)"
 #: code:addons/account/account_invoicexxx.py:882
 #, python-format
 msgid "Please create some invoice lines."
-msgstr "Creare voci della fattura"
+msgstr "Creare delle delle righe sulla fattura"
 
 #. module: account
 #: report:account.overdue:0
