--- a/material_asset/i18n/it.po
+++ b/material_asset/i18n/it.po
@@ -797,7 +797,7 @@ msgstr "Documentazione dei mezzi/asset"
 #. module: material_asset
 #: constraint:stock.move:0
 msgid "You must assign a production lot for this product"
-msgstr "È necessario assegnare un lotto di produzione per questo prodotto"
+msgstr "È necessario assegnare un lotto/seriale per questo prodotto"
 
 #. module: material_asset
 #: selection:asset.use,color:0
